# narechi

./: .clang-format  .clangd  .cmake-format.py  .gitignore  CMakeLists.txt  README.md
assets/shaders/: texture_f.glsl  texture_v.glsl
cmake/: EmbedAsset.cmake
cmake/scripts/: EmbedPlayer.cmake
docs/guides/: moving_object_tutorial.md  quickstart.md
examples/flocking_demo/: flocking_demo.narechi
examples/moving_object_tutorial/: moving_object_tutorial.narechi
narechi/: CMakeLists.txt
narechi-launcher/: CMakeLists.txt
narechi-launcher/include/: editor_app.hpp  editor_layer.hpp  entity_selection_context.hpp  file_extensions.hpp  launcher_layer.hpp  project.hpp  project_asset.hpp  project_creation_layer.hpp
narechi-launcher/include/panels/: build_panel.hpp  content_browser_panel.hpp  editor_panel.hpp  inspector_panel.hpp  scene_hierarchy_panel.hpp  scene_view_panel.hpp  sprite_import_panel.hpp
narechi-launcher/src/: editor_app.cpp  editor_app.hpp  editor_layer.cpp  editor_layer.hpp  launcher_app.cpp  launcher_layer.cpp  main.cpp  project.cpp  project_asset.cpp  project_creation_layer.cpp
narechi-launcher/src/debug/: placeholder_embed.cpp
narechi-launcher/src/panels/: build_panel.cpp  content_browser_panel.cpp  editor_panel.cpp  inspector_panel.cpp  scene_hierarchy_panel.cpp  scene_view_panel.cpp  sprite_import_panel.cpp
narechi-player/: CMakeLists.txt
narechi-player/include/: player_app.hpp  scene_layer.hpp
narechi-player/src/: main.cpp  scene_layer.cpp
narechi/include/: narechi.hpp
narechi/include/asset/: asset.hpp  asset_extensions.hpp  component_def_asset.hpp  database.hpp  embed.hpp  lua_script_asset.hpp  lua_script_meta_asset.hpp  scene_asset.hpp  sprite_asset.hpp
narechi/include/core/: app.hpp  assert.hpp  buffer.hpp  core.hpp  entry.hpp  layer.hpp  layer_stack.hpp  logger.hpp  window.hpp
narechi/include/core/events/: app_event.hpp  event.hpp
narechi/include/file/: nfd_context.hpp
narechi/include/graphics/: buffer.hpp  buffer_element.hpp  format.hpp  framebuffer.hpp  graphics_context.hpp  handle.hpp  image.hpp  index_buffer.hpp  render2d.hpp  render_command.hpp  renderer_api.hpp  shader.hpp  shader_data_type.hpp  shader_type.hpp  sprite.hpp  texture.hpp  texture2d.hpp  vertex_array.hpp  vertex_buffer.hpp
narechi/include/gui/: button_element.hpp  element.hpp  float_input_element.hpp  image_button_element.hpp  image_element.hpp  menu_bar.hpp  space_element.hpp  table_element.hpp  text_element.hpp  text_input_element.hpp  window.hpp
narechi/include/gui/scope/: table_scope.hpp  tree_node_scope.hpp  tree_scope.hpp
narechi/include/imgui/: imgui_button_element.hpp  imgui_context.hpp  imgui_float_input_element.hpp  imgui_image_button_element.hpp  imgui_image_element.hpp  imgui_layer.hpp  imgui_menu_bar.hpp  imgui_space_element.hpp  imgui_table_element.hpp  imgui_text_element.hpp  imgui_text_input_element.hpp  imgui_window.hpp
narechi/include/imgui/scope/: imgui_table_scope.hpp  imgui_tree_node_scope.hpp  imgui_tree_scope.hpp
narechi/include/platform/opengl/: opengl_context.hpp  opengl_framebuffer.hpp  opengl_index_buffer.hpp  opengl_renderer_api.hpp  opengl_shader.hpp  opengl_texture2d.hpp  opengl_utils.hpp  opengl_vertex_array.hpp  opengl_vertex_buffer.hpp
narechi/include/platform/vulkan/: vulkan_framebuffer.hpp  vulkan_renderer_api.hpp  vulkan_shader.hpp
narechi/include/platform/win32/: win32window.hpp
narechi/include/rendering/: buffer.hpp  framebuffer.hpp  graphics_context.hpp  image.hpp  render_command.hpp  renderer_api.hpp  shader.hpp  shader_type.hpp  texture.hpp  texture2d.hpp
narechi/include/scene/: component.hpp  scene.hpp
narechi/include/script/: lua_script.hpp  raw_component_view.hpp  sol2_context.hpp
narechi/include/utils/: enum_flag_utils.hpp  file_utils.hpp  singleton.hpp
narechi/src/: entry.cpp  entry.hpp  narechi.h  narechi.hpp
narechi/src/asset/: asset.cpp  component_def_asset.cpp  lua_script_asset.cpp  lua_script_meta_asset.cpp  scene_asset.cpp  sprite_asset.cpp
narechi/src/core/: app.cpp  app.hpp  assert.hpp  buffer.hpp  core.hpp  layer.hpp  layer_stack.cpp  layer_stack.hpp  logger.cpp  logger.hpp  window.cpp  window.hpp
narechi/src/core/events/: app_event.hpp  event.hpp
narechi/src/file/: nfd_context.cpp
narechi/src/graphics/: buffer_element.cpp  framebuffer.cpp  graphics_context.cpp  handle.cpp  image.cpp  index_buffer.cpp  render2d.cpp  render_command.cpp  renderer_api.cpp  shader.cpp  sprite.cpp  texture2d.cpp  vertex_array.cpp  vertex_buffer.cpp
narechi/src/gui/: button_element.cpp  element.cpp  float_input_element.cpp  image_button_element.cpp  image_element.cpp  menu_bar.cpp  space_element.cpp  table_element.cpp  text_element.cpp  text_input_element.cpp  window.cpp
narechi/src/gui/scope/: table_scope.cpp  tree_node_scope.cpp  tree_scope.cpp
narechi/src/imgui/: imgui_button_element.cpp  imgui_context.cpp  imgui_float_input_element.cpp  imgui_image_button_element.cpp  imgui_image_element.cpp  imgui_layer.cpp  imgui_menu_bar.cpp  imgui_space_element.cpp  imgui_table_element.cpp  imgui_text_element.cpp  imgui_text_input_element.cpp  imgui_window.cpp
narechi/src/imgui/scope/: imgui_table_scope.cpp  imgui_tree_node_scope.cpp  imgui_tree_scope.cpp
narechi/src/platform/opengl/: opengl_context.cpp  opengl_framebuffer.cpp  opengl_index_buffer.cpp  opengl_renderer_api.cpp  opengl_shader.cpp  opengl_texture2d.cpp  opengl_vertex_array.cpp  opengl_vertex_buffer.cpp
narechi/src/platform/vulkan/: vulkan_framebuffer.cpp  vulkan_renderer_api.cpp  vulkan_renderer_api.hpp  vulkan_shader.cpp
narechi/src/platform/win32/: win32window.cpp  win32window.hpp
narechi/src/rendering/: buffer.hpp  framebuffer.cpp  graphics_context.cpp  image.cpp  render_command.cpp  render_command.hpp  renderer_api.cpp  renderer_api.hpp  shader_type.hpp  texture2d.cpp
narechi/src/scene/: scene.cpp
narechi/src/script/: lua_script.cpp  raw_component_view.cpp  sol2_context.cpp
narechi/src/utils/: file_utils.cpp  singleton.hpp  time_utils.cpp  time_utils.hpp
src/: entry.cpp
src/core/: app.cpp  app.hpp  assert.hpp  (+3 more)
(+11 files in other folders)
